# MyPlayer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/myplyaer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: myplayer.cpp
app/src/main/java/com/example/myplyaer/: MainActivity.java  PlayerManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myplyaer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
